// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data collection screen renders a success message and download button after payload is loaded 1`] = `
<div
  className="data-collection-status icon-with-content"
>
  <Icon
    className="checkmark"
    name="check"
    type="fa"
  />
  <div>
    <h3>
      Inventory collection complete
    </h3>
    <p>
      7
       
      VMs examined
    </p>
    <div
      className="buttons"
    >
      <div>
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="primary"
          disabled={true}
          onClick={[Function]}
        >
          Download Inventory File
        </Button>
      </div>
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        disabled={false}
        onClick={[MockFunction]}
      >
        Return to Summary
      </Button>
    </div>
  </div>
</div>
`;

exports[`Data collection screen renders an error message if data collection failed 1`] = `
<EmptyStateWithButton
  buttonText="Cancel"
  href={null}
  iconName="error-circle-o"
  iconType="pf"
  message="some error here"
  onClick={[MockFunction]}
  title="Failed to collect inventory data"
/>
`;

exports[`Data collection screen renders with a spinner initially and starts the bundle on mount 1`] = `
<div
  className="data-collection-status icon-with-content"
>
  <Spinner
    className=""
    inline={true}
    inverse={false}
    loading={true}
    size="lg"
  />
  <div>
    <h3
      className="beside-spinner"
    >
      Collecting inventory data
    </h3>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="default"
      disabled={false}
      onClick={[MockFunction]}
    >
      Cancel
    </Button>
  </div>
</div>
`;
